erDiagram
    User ||--o{ Party : hosts
    User ||--o{ PartyGuest : participatesAs
    User ||--o{ FavoriteSong : hasMany
    Party ||--|{ PartyGuest : hasMany
    Party ||--|{ QueueSong : hasMany
    PartyGuest ||--o{ QueueSong : requests

    User {
        string userId PK
        string firstName
        string lastName
        string email UK
        string phoneNumber
        string profilePicture
        datetime createdAt
        datetime updatedAt
    }

    Party {
        string partyId PK
        string name
        string hostId FK
        string code UK
        string status "active|paused|ended"
        array participants "userIds"
        number maxParticipants
        string description
        datetime createdAt
        datetime updatedAt
        datetime startedAt
        datetime endedAt
    }

    PartyGuest {
        string guestId PK
        string partyId FK
        string userId FK
        string displayName
        string email
        string profilePicture
        boolean isHost
        number boostsRemaining
        datetime joinedAt
        datetime leftAt
    }

    QueueSong {
        string songId PK
        string partyId FK
        string videoId "YouTube ID"
        string title
        string artist
        object requestedBy "userId, name, initials, avatar"
        boolean boosted
        number boostCount
        string status "queued|playing|played|skipped"
        datetime addedAt
        datetime boostedAt
        datetime playedAt
        array praises "from, fromName, type, timestamp"
    }

    FavoriteSong {
        string songId PK
        string userId FK
        string videoId "YouTube ID"
        string title
        string artist
        string thumbnailUrl
        string duration
        datetime addedAt
        number timesRequested
        datetime lastRequestedAt
        array tags
    }
   
